Increase width of jump to box so that bold highlited selection does not cause issues

--- a/webpage/pages/bfv/bfv_chart.css
+++ b/webpage/pages/bfv/bfv_chart.css
@@ -542,5 +542,6 @@ fiveMline {
 .custom-combobox-input {
     margin: 0;
     padding: 5px 10px;
+    width: 300px;
 }
  /* End custom combobox */
